# lights

./: Cargo.toml  design.md  run_on_pi.sh
.cargo/: config
src/: blank.rs  client.rs  controller.rs  flac.rs  lights.rs  main.rs  music.rs  protocol.rs
src/color/: mod.rs
src/color/cmap/: inferno.rs  magma.rs  mod.rs
src/controller/: blank.rs  mod.rs  music.rs
src/controller/music/: mod.rs
src/controller/music/snap/: client.rs  mod.rs  protocol.rs
src/snap/: client.rs
